# codegraph

./: .gitignore
.claude/: settings.local.json
clients/cli/: .env.example  README.md  package-lock.json  package.json
clients/cli/src/: index.ts
clients/cli/src/llm/: openai.ts
clients/common-ts/: package-lock.json  package.json  tsconfig.json
clients/common-ts/src/: bridge.ts  enrichment.ts  index.ts
clients/common-wasm/: codegraph.wasm
clients/copilot/: package-lock.json  package.json  tsconfig.json
clients/copilot/src/: analyze.ts  ask.ts  extension.ts  llm-bridge.ts  plan.ts  questions-webview.ts  specify.ts  tasks-webview.ts  tasks.ts  utils.ts
graph/: Cargo.toml
graph/.cargo/: config.toml
graph/src/: explorer.rs  explorer_tests.rs  filesystem.rs  graph.rs  indexer.rs  lib.rs  parser.rs  serializer.rs
graph/src/agent/: graph_tools.rs  interactive_architect.rs  llm_agent.rs  memory.rs  mod.rs  new_feature_architect.rs  new_feature_pm.rs  new_feature_se.rs  product_manager.rs  software_architect.rs  tools.rs
graph/src/languages/: golang.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
graph/src/languages/test/: golang_tests.rs  java_tests.rs  python_tests.rs  rust_tests.rs  typescript_tests.rs
graph/src/languages/test/fixtures/: Shop.java  shop.go  shop.py  shop.rs  shop.ts
